# QtGalaxyUI

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Controls/: AppBar.qml  FluentIcons.qml  FocusRectangle.qml  FramelessWindow.qml  GComboBox.qml  GaButton.qml  GaComboBox.qml  GaIcon.qml  GaIconButton.qml  GaIconLabel.qml  GaScrollBar.qml  QButton.qml  QComboBox.qml  QIcon.qml  QIconButton.qml  QIconLabel.qml  QTextFont.qml  Shadow.qml  TextFont.qml  Theme.qml  qmldir
example/: Main.qml  T_Content.qml
src/: AppHelper.cpp  AppHelper.h  CircularReveal.h  Def.h  Frameless.cpp  Frameless.h  Theme.cpp  Theme.h  Tools.cpp  Tools.h  WindowEffect.cpp  WindowEffect.h  stdafx.h
